--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -18,6 +18,12 @@
     <span>Timestamp:</span> {{model.timestamp}}<br>
     {{#each model.systems as |system|}}
 	  <span>Systemnamen: </span> {{system.name}}<br>
+      {{#each model.systems.nodegroup as |nodegroup|}}
+      <span>Nodegroup: </span> {{nodegroup.name}}<br>
+        {{#each nodegroup.node as |node|}}
+        <span>Node: </span> {{system.name}}<br>    
+        {{/each}}
+      {{/each}}
     {{/each}}
 	  <span>Errors: </span> {{model.exceptions}}<br>
   </div>
@@ -25,12 +31,14 @@
 </div>
 <div class="buttonMenu">
 	<div class="buttonContainer">
-  		<button {{action 'newNode' model}}>New Node</button>
-  		<button {{action 'newNodegroup'}}>New Nodegroup</button>
-  		<button {{action 'addCommunication'}}>Communication</button>
+      <input id="nSN" value="newSystemName">
+      <button {{action 'newSystem' model}}>New System</button><br>
+      <input id="nNgN" value="newNodegroupName">
+      <button {{action 'newNodegroup' model}}>New Nodegroup</button><br>
+  		<input id="nNN" value="newNodeName">
+      <button {{action 'newNode' model}}>New Node</button><br>
   	</div>
 </div>
-
 
 
 
