added the option to delete systems by the name of the inputfield in front of the "new system" button

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -49,6 +49,8 @@
       <button id="bNNN" {{action 'newNode' model}}>New Node</button><br>
       <input id="nAN" value="newApplicationName">
       <button id="bNAN" {{action 'newApplication' model}}>New Application</button><br>
+      <br>
+      <button id="bD" {{action 'delete' model}}>Delete System</button><br>
   	</div>
 </div>
 
