tried to visualize the landscape > not working added the TODO to look into the timestamp of the landscape

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -4,7 +4,6 @@
 
 
 <div class="canvas">
-<!-- {{modeleditor-visualization}}  -->
 
  <br>
  <br>
@@ -41,6 +40,8 @@
 </div>
 <div class="buttonMenu">
 	<div class="buttonContainer">
+      <input id="nMN" type=number value="42">
+      <button id="bNMN" {{action 'newModel' model}}>New Model</button><br>
       <input id="nSN" value="newSystemName">
       <button id="bNSN" {{action 'newSystem' model}}>New System</button><br>
       <input id="nNgN" value="newNodegroupName">
