newest try of visualizing the modellEditor, still not working, with newest updates of frontend (giving a landscape into the rendering method also some console outputs for debugging reasons

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -4,7 +4,7 @@
 
 
 <div class="canvas">
-{{modeleditor-visualization}}
+{{visualization/rendering/landscape-rendering latestLandscape=modellRepo.modellLandscape}}
  <br>
  <br>
  <br>
