now one is able to add communications delete system now crashes the system

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -52,6 +52,22 @@
       <button id="bNAN" {{action 'newApplication' modellRepo.modellLandscape}}>New Application</button><br>
       <br>
       <button id="bD" {{action 'delete' modellRepo.modellLandscape}}>Delete System</button><br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      
+      <input id="cPS1" value="newSystemName"><br>
+      <input id="cPNG1" value="newNodegroupName"><br>
+      <input id="cPN1" value="newNodeName"><br>
+      <input id="cPA1" value="newApplicationName"><br>
+      <button id="bNAN" {{action 'communicationActivate' modellRepo.modellLandscape}}>Communication ACTIVATE</button><br>
+      <input id="cPS2" value="newSystemName"><br>
+      <input id="cPNG2" value="newNodegroupName"><br>
+      <input id="cPN2" value="newNodeName"><br>
+      <input id="cPA2" value="newApplicationName"><br>
+      
   	</div>
 </div>
 
