now one is able to hit the "enter" key to add clazzes and components in a more frequent fassion

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -53,6 +53,22 @@
       &emsp;<input id="nClazzN" value="newClassName">
       &emsp;<button id="bNClazzN" {{action 'newClazz' modellRepo.modellApplication}}>New Class</button><br>
       <br>
+      <script>
+      document.getElementById("nCComponentN").addEventListener("keyup", function(event) {
+        event.preventDefault();
+        if (event.keyCode === 13) {
+          document.getElementById("bNComponentN").click();
+        }
+      });
+
+      document.getElementById("nClazzN").addEventListener("keyup", function(event) {
+      event.preventDefault();
+      if (event.keyCode === 13) {
+        document.getElementById("bNClazzN").click();
+      }
+      });
+      </script>
+
     {{/if}}
   </div>
 </div>
