prettied up the code further

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -66,7 +66,7 @@
       <br>
       <br>
       <br>
-      <br>
+      &emsp;<button id="landscapeView" {{action 'switchLandscape'}}>Go Back to LandscapeView</button><br>
       <br>
       <br>
       <br>
