added the functionality of filling the dropdown with content from the backend can now switch between models by clicking the corresponding entry in the dropdown menu

--- a/addon/templates/modelleditor.hbs
+++ b/addon/templates/modelleditor.hbs
@@ -7,7 +7,7 @@
         urlPath=exportLandscapeUrl fileName=exportLandscapeFileName) 
       (component "visualization/page-setup/navbar/file-uploader" 
         backendURL=uploadLandscapeUrl) 
-      (component "model-dropdown") 
+      (component "model-dropdown" replayModels=fillDropdownUrl) 
     )
   }}
   {{visualization/rendering/landscape-rendering latestLandscape=modellRepo.modellLandscape interaction=landscapeInteraction}}
