--- a/addon/templates/components/model-dropdown.hbs
+++ b/addon/templates/components/model-dropdown.hbs
@@ -1,12 +1,8 @@
 <div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Model Aussucher
-    <span class="caret"></span>
-  </button>
-	<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-		<li>mal sehen</li>
-		{{#each replayModels as |model|}}
-			<li>{{model.id}}</li>
-		{{/each}}
-	</ul>
+  <select class="form-control" id="sel1" onchange={{action 'select' value="target.value"}}>
+  	<option disabled selected value> -- select a modellandscape -- </option>
+  	{{#each replayModels as |replayModel|}}
+  		<option>{{replayModel}}</option> 
+  	{{/each}}
+   </select>
 </div>
